# skills

./: README.md
code-git/: SKILL.md
code-git/references/: workflows.md
code-sglang-debugging/: SKILL.md
code-sglang-debugging/references/: testing-guide.md
code-skills/git/references/: commit-messages.md  conflict-resolution.md
code-skills/sglang-debugging/references/: code-analysis.md  environment-troubleshooting.md  sglang-errors.md
code-skills/skill-creator/: pyproject.toml
paper-arxiv-read/: SKILL.md
paper-arxiv-read/scripts/: extract_images.py
paper-innovation-generator/: SKILL.md
paper-innovation-review/: SKILL.md
skill-creator/: SKILL.md
skill-creator/references/: patterns.md
skill-creator/scripts/: init_skill.py  validate_skill.py
