# ABOUTME: Project configuration for skill-creator scripts
# ABOUTME: Defines PyYAML dependency required for SKILL.md validation

[project]
name = "skill-creator"
version = "0.1.0"
description = "Scripts for creating and validating Claude Code skills"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
